--- a/src/react/components/pages/appSettings/appSettingsPage.scss
+++ b/src/react/components/pages/appSettings/appSettingsPage.scss
@@ -1,7 +1,8 @@
 .app-settings-page {
     display: flex;
     flex-direction: row;
-    height: 100%;
+    flex-grow: 1;
+    min-height: fit-content;
 
     &-form {
         flex-grow: 1;
