--- a/src/react/components/pages/connections/connectionsPage.scss
+++ b/src/react/components/pages/connections/connectionsPage.scss
@@ -1,10 +1,13 @@
 .app-connections-page {
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
-    height: 100%;
+    min-height: fit-content;
 
     &-list {
-        min-width: 20vw;
+        flex-basis: 20vw;
+        min-width: 250px;
+        max-width: 300px;
     }
 
     &-detail {
